Created Booking routes
